[package]
name = "web-sentence"
version = "0.1.0"
authors = ["Louis MOUHAT <louis.mouhat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5.0"
rand = "0.8.0"
chashmap = "*"
futures = "0.3.15"
serde = "1.0.126"
serde_json = "1.0.64"
cfg-if = "1.0.0"
once_cell = "1.8.0"
base64 = "0.13"
async-fs = "1.5.0"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", rev="a94d84e7805196364b4fc584205ce4882f3acd81"}
gst-pbutils = { package = "gstreamer-pbutils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", rev="a94d84e7805196364b4fc584205ce4882f3acd81" }
ges = { package = "gstreamer-editing-services", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", rev="a94d84e7805196364b4fc584205ce4882f3acd81" }

[dependencies.tokio]
version = "0.2.25"
features = ["process"]

[dev-dependencies]
actix-rt = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]