[package]
name = "web-sentence"
version = "0.1.0"
authors = ["Louis MOUHAT <louis.mouhat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2"
actix-web-actors = "4.2"
actix-files = "0.6"
rand = "0.8.0"
chashmap = "*"
futures = "0.3.15"
serde = "1.0.126"
serde_json = "1.0.64"
cfg-if = "1.0.0"
once_cell = "1.8.0"
base64 = "0.13"
async-fs = "1.5.0"
regex = "*"
gst = { package = "gstreamer", version = "0.20.0"}
gst-pbutils = { package = "gstreamer-pbutils", version = "0.20.0" }
ges = { package = "gstreamer-editing-services", version = "0.20.0" }
[dependencies.youtube_dl]
version = "0.8.0"
features = ["tokio"]

[dependencies.tokio]
version = "1.25"
features = ["process"]

[dev-dependencies]
actix-rt = "^2.6"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]
